// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginLogoutIcon  renders correctly with false prop 1`] = `
<div
  className="split padding-20"
>
  <a
    className="flex color-black"
    href="/"
    onClick={[Function]}
  >
    <div>
      <div
        className="margin-5"
      >
         Login
      </div>
    </div>
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge margin-login  css-tzssek-MuiSvgIcon-root"
      data-testid="LoginIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M11 7 9.6 8.4l2.6 2.6H2v2h10.2l-2.6 2.6L11 17l5-5zm9 12h-8v2h8c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-8v2h8z"
      />
    </svg>
  </a>
</div>
`;

exports[`LoginLogoutIcon  renders correctly with true prop 1`] = `
<div
  className="split padding-20"
>
  <a
    className="flex color-black"
    href="/"
    onClick={[Function]}
  >
    <div>
      <div
        className="margin-5"
      >
         Logout
      </div>
    </div>
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge margin-login css-tzssek-MuiSvgIcon-root"
      data-testid="LogoutIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m17 7-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4z"
      />
    </svg>
  </a>
</div>
`;
